--- a/index.html
+++ b/index.html
@@ -28,16 +28,11 @@
         <div class="gato">Gato</div>
         <div class="video">Video</div>
         <div class="ubicacion">Nos ubicamos en la calle elpidio gonzalez , villa del parque , a metros de la av nazca</div>
-            <footer class="footer- padre">
-                <a href="#">Instagram</a>
-                <a href="#">Facebook</a>
-                <p class="p">¡Seguinos en las Redes!</p>
-            </footer>
         </div>
-    </div>
 
-
-
+        <footer>
+            <p class="p">¡Seguinos en las Redes!</p>
+        </footer>
 
 </body>
 
