--- a/index.html
+++ b/index.html
@@ -5,37 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Dolcetto Petshop</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 </body>
 <img class="portada" src="img/portada dolcetto.jpg" alt="Nuestro Local" width="103%" height="70%">
-    <h1>Dolcetto Petshop</h1>
+<h1>Dolcetto Petshop</h1>
 
-            <nav>
-            <ul>
-                <a href="index.html">Inicio</a>
-                <a href="./secciones/ofertas.html">Ofertas</a>
-                <a href="./secciones/productos.html">Productos</a>
-                <a href="./secciones/quienes-somos.html">Quienes Somos</a>
-                <a href="./secciones/veterinaria.html">Veterinaria</a>
-                <a href="./secciones/contacto.html">Contacto</a>
-            </ul>
-        </nav>
+<nav>
+    <ul>
+        <a href="index.html">Inicio</a>
+        <a href="./secciones/ofertas.html">Ofertas</a>
+        <a href="./secciones/productos.html">Productos</a>
+        <a href="./secciones/quienes-somos.html">Quienes Somos</a>
+        <a href="./secciones/veterinaria.html">Veterinaria</a>
+        <a href="./secciones/contacto.html">Contacto</a>
+    </ul>
+</nav>
 
-    <div class="grid-container">
-        <div class="perro">Perro</div>
-        <div class="gato">Gato</div>
-        <div class="video">Video</div>
-        <div class="ubicacion">Nos ubicamos en la calle elpidio gonzalez , villa del parque , a metros de la av nazca</div>
-        </div>
+<div class="grid-container">
+    <div class="perro">Perro</div>
+    <div class="gato">Gato</div>
+    <div class="video">Video</div>
+    <div class="ubicacion">Nos ubicamos en la calle elpidio gonzalez , villa del parque , a metros de la av nazca</div>
+</div>
 
-        <footer>
-            <p class="p">¡Seguinos en las Redes!</p>
-        </footer>
+    <img src="./img/perro.jpg" class="img-perro" alt="Perro">
+
+<img src="./img/gato.jpg" class="img-gato" alt="gato">
+<footer>
+    <p class="p">¡Seguinos en las Redes!</p>
+</footer>
 
 </body>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
 </html>
