--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/quienes-somos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    
     <title>Quienes Somos Dolcetto Petshop</title>
+    <link rel="stylesheet" href="../css/quienes-somos.css">
 </head>
 
 <body>
@@ -25,9 +28,16 @@
         </nav>
     </Header>
 
+    <ul class="list-group">
+        <li class="list-group-item active" aria-current="true">Direccion</li>
+        <li class="list-group-item">Telefono</li>
+        <li class="list-group-item">Envio domicio</li>
+    </ul>
     <footer>
         <p>¡Seguinos en las Redes!</p>
     </footer>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+crossorigin="anonymous"></script>
 </html>
