--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -25,13 +25,15 @@
             </ul>
         </nav>
 
-        <div class="producto">
-            <div class="uno">Royal Canin</div>
-            <div class="dos">Eukanuba</div>
-            <div class="tres">Proplan</div>
-            <div class="cuatro">Excellent</div>
-        </div>
     </Header>
+
+    <div class="producto">
+        <div class="royal">Royal Canin</div>
+        <div class="euka">Eukanuba</div>
+        <div class="prop">Proplan</div>
+        <div class="exc">Excellent</div>
+    </div>
+
 
 
 
@@ -46,7 +48,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../img/EUKANUBA.jpg" class="d-block w-100" >
+                <img src="../img/EUKANUBA.jpg" class="d-block w-100">
             </div>
             <div class="carousel-item">
                 <img src="../img/EXCELLENT.webp" class="d-block w-100" alt="...">
