aplicando sass a todo el proyecto

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="103%" height="70%">
+    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="100%" height="70%">
     <h1>Contacto Dolcetto Petshop</h1>
     <Header>
         <nav>
             <ul>
-                <a href="../index.html">Inicio</a>
-                <a href="ofertas.html">Ofertas</a>
-                <a href="productos.html">Productos</a>
-                <a href="quienes-somos.html">Quienes Somos</a>
-                <a href="veterinaria.html">Veterinaria</a>
-                <a href="contacto.html">Contacto</a>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="quienes-somos.html">Quienes Somos</a></li>
+                <li><a href="veterinaria.html">Veterinaria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </Header>
@@ -54,6 +54,8 @@
     <footer>
         <p>¡Seguinos en las Redes!</p>
     </footer>
+
+
 </body>
 
 </html>
