--- a/secciones/ofertas.html
+++ b/secciones/ofertas.html
@@ -5,58 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <title>Ofertas Dolcetto Petshop</title>
     <link rel="stylesheet" href="../css/ofertas.css">
 </head>
 
 <body>
-    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="103%" height="70%">
+    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="100%" height="70%">
     <h1>Ofertas Dolcetto Petshop</h1>
     <Header>
         <nav>
             <ul>
-                <a href="../index.html">Inicio</a>
-                <a href="ofertas.html">Ofertas</a>
-                <a href="productos.html">Productos</a>
-                <a href="quienes-somos.html">Quienes Somos</a>
-                <a href="veterinaria.html">Veterinaria</a>
-                <a href="contacto.html">Contacto</a>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="quienes-somos.html">Quienes Somos</a></li>
+                <li><a href="veterinaria.html">Veterinaria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </Header>
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../img/20 desc.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="../img/50-off.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+
 
     <footer>
         <p>¡Seguinos en las Redes!</p>
     </footer>
+
 </body>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
 
 </html>
