--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,75 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Productos Dolcetto Petshop</title>
     <link rel="stylesheet" href="../css/productos.css">
 </head>
 
 <body>
-    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="103%" height="70%">
+    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="100%" height="70%">
     <h1>Producto Dolcetto Petshop</h1>
     <Header>
         <nav>
             <ul>
-                <a href="../index.html">Inicio</a>
-                <a href="ofertas.html">Ofertas</a>
-                <a href="productos.html">Productos</a>
-                <a href="quienes-somos.html">Quienes Somos</a>
-                <a href="veterinaria.html">Veterinaria</a>
-                <a href="contacto.html">Contacto</a>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="quienes-somos.html">Quienes Somos</a></li>
+                <li><a href="veterinaria.html">Veterinaria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
 
     </Header>
 
-    <div class="producto">
-        <div class="royal">Royal Canin</div>
-        <div class="euka">Eukanuba</div>
-        <div class="prop">Proplan</div>
-        <div class="exc">Excellent</div>
-    </div>
+    <footer>
+        <p>¡Seguinos en las Redes!</p>
+    </footer>
 
-
-
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../img/EUKANUBA.jpg" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="../img/EXCELLENT.webp" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="../img/royal.jpg" class="d-block w-100" alt="...">
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-            </script>
-        <footer>
-            <p>¡Seguinos en las Redes!</p>
-        </footer>
 </body>
 
 
