--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -5,39 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    
     <title>Quienes Somos Dolcetto Petshop</title>
     <link rel="stylesheet" href="../css/quienes-somos.css">
 </head>
 
 <body>
-    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="103%" height="70%">
     <h1>Quienes Somos Dolcetto Petshop</h1>
     <Header>
         <nav>
             <ul>
-                <a href="../index.html">Inicio</a>
-                <a href="contacto.html">Ofertas</a>
-                <a href="productos.html">Productos</a>
-                <a href="quienes-somos.html">Quienes Somos</a>
-                <a href="veterinaria.html">Veterinaria</a>
-                <a href="contacto.html">Contacto</a>
-            </ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="quienes-somos.html">Quienes Somos</a></li>
+                <li><a href="veterinaria.html">Veterinaria</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
         </nav>
     </Header>
 
-    <ul class="list-group">
-        <li class="list-group-item active" aria-current="true">Direccion</li>
-        <li class="list-group-item">Telefono</li>
-        <li class="list-group-item">Envio domicio</li>
     </ul>
     <footer>
         <p>¡Seguinos en las Redes!</p>
     </footer>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-crossorigin="anonymous"></script>
+
 </html>
