--- a/secciones/ofertas.html
+++ b/secciones/ofertas.html
@@ -5,31 +5,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Palette+Mosaic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/430e02ecf3.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Ofertas Dolcetto Petshop</title>
-    <link rel="stylesheet" href="../css/ofertas.css">
 </head>
 
 <body>
-    <img class="portada" src="../img/portada dolcetto.jpg" alt="Nuestro Local" width="100%" height="70%">
-    <h1>Ofertas Dolcetto Petshop</h1>
-    <Header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="ofertas.html">Ofertas</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="quienes-somos.html">Quienes Somos</a></li>
-                <li><a href="veterinaria.html">Veterinaria</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </Header>
+    <header>
+        <h1>Dolcetto Petshop</h1>
+    </header>
+    
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="hipervinculos" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="enuso" href="./ofertas.html">Ofertas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="hipervinculos" href="./productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="hipervinculos" href="./quienes-somos.html">Quienes Somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="hipervinculos" href="./veterinaria.html">Veterinaria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="hipervinculos" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 
 
     <footer>
         <p>¡Seguinos en las Redes!</p>
+        <div class="links">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
