--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dolcetto Petshop</title>
+    <meta name="description" content="Este un sitio web sobre un petshop-veterinaria y sus distintos servicios">
+    <meta name="keywords"
+        content="Veterinaria, petshop, gatos, perros, villa del parque, alimento balanceado,mascotas ">
+    <meta name="author" content="Barbara Mari">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,15 +25,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon/huella.png">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Dolcetto Petshop</title>
 </head>
 
 
 <body>
     <header>
         <div class="fondo"></div>
-        <h1>Dolcetto Petshop</h1>
+        <h1>Dolcetto Petshop <i class="fa-solid fa-paw"></i></h1>
     </header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
