--- a/secciones/ofertas.html
+++ b/secciones/ofertas.html
@@ -5,26 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ofertas en petshop-veterinaria y alimento de mascotas">
+    <meta name="keywords"
+        content="Oferta alimento, Veterinaria, petshop, gatos, perros, villa del parque, alimento balanceado,mascotas ">
+    <meta name="author" content="Barbara Mari">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Palette+Mosaic&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/430e02ecf3.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/430e02ecf3.js" crossorigin="anonymous"></script>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="../img/favicon/huella plata.png">
     <link rel="stylesheet" href="../css/style.css">
     <title>Ofertas Dolcetto Petshop</title>
 </head>
 
 <body>
     <header>
-        <h1>Dolcetto Petshop</h1>
+        <h1>Dolcetto Petshop <i class="fa-solid fa-bone"></i></h1>
     </header>
-    
+
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
