--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Este un sitio web sobre un petshop-veterinaria y sus distintos servicios">
+    <meta name="keywords"
+        content="Veterinaria, telefono ,petshop, gatos, perros, villa del parque, alimento balanceado,mascotas ">
+    <meta name="author" content="Barbara Mari">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,10 +16,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Palette+Mosaic&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/430e02ecf3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap"
         rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
+        rel="stylesheet">
+    <link rel="shortcut icon" href="../img/favicon/perrogatored.png">
     <link rel="stylesheet" href="../css/style.css">
     <title>Quienes Somos Dolcetto Petshop</title>
 </head>
@@ -23,7 +31,7 @@
 
 <body>
     <header>
-        <h1>Dolcetto Petshop</h1>
+        <h1>Dolcetto Petshop <i class="fa-solid fa-circle-info"></i></h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
