--- a/secciones/veterinaria.html
+++ b/secciones/veterinaria.html
@@ -5,23 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="sitio web que brinda servicios de Atencion Veterinaria">
+    <meta name="keywords" content="Veterinaria, consulta, vacunas, gato, perros, villa del parque,mascotas ">
+    <meta name="author" content="Barbara Mari">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Palette+Mosaic&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Palette+Mosaic&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alata&family=Cookie&family=Lobster&family=Lobster+Two&family=Luckiest+Guy&family=Pacifico&family=Palette+Mosaic&family=Satisfy&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/favicon/corazon perro gato.png">
     <title>Veterinaria Dolcetto Petshop</title>
 </head>
 
 
 <body>
     <header>
-        <h1><i class="fa-solid fa-paw"></i>Dolcetto Petshop <i class="fa-solid fa-bone"></i></h1>
+        <h1></i>Dolcetto Petshop <i class="fa-solid fa-briefcase-medical"></i></h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
