realizando correcciones de la tercera entrega

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -74,28 +74,24 @@
         </div>
     </nav>
 
-    <Form>
+    <form>
         <fieldset>
             <legend class="formulario">Formulario de Contacto</legend>
-            <label for="nombre-apellido">Nombre:</label>
+            <label for="Nombre">Nombre:</label>
             <input type="text" name="Nombre" placeholder="escriba su nombre">
-            <label for="Nombre-apellido">Apellido:</label>
+            <label for="Apellido">Apellido:</label>
             <input type="text" name="apellido" placeholder="escriba su apellido">
             <label for="telefono">Telefono:</label>
             <input type="text" name="telefono" placeholder="escriba su telefono">
             <div class="contacto">Contactate con Nosotros</div>
             <textarea name="text" cols="100" rows="8" placeholder="Dejenos sus datos"></textarea>
-            <div></div>
             <div class="condiciones">¿Acepta términos y condiciones?</div>
             <input type="checkbox" name="check">
-            <div>
-
-            </div>
             <input type="submit" value="Enviar Formulario">
             <input type="reset" value="Limpiar Formulario">
 
         </fieldset>
-    </Form>
+    </form>
 
     <footer>
         <p>¡Seguinos en las Redes!</p>
