--- a/secciones/ofertas.html
+++ b/secciones/ofertas.html
@@ -67,13 +67,13 @@
 
 
 
-    <div>
-        <a href="../secciones/productos.html"><img class="oferta" src="../img/alimento mascotas.jpg" alt="#">
-        <p>Imagen de alimento con promos</p></a>
+    <div class="cajaoferta">
+        <a href="../secciones/productos.html"><img class="oferta" src="../img/alimento mascotas.jpg" alt="#"></a>
+        <p class="textooferta">No te pierdas nuestras promos </p>
         <a href="../secciones/veterinaria.html"><img class="oferta" src="../img/peluqueria canina.jpg" alt="#"></a>
-        <p> descuento por vacuna y consulta</p>
+        <p class="textooferta"> Tenemos descuentos  en la primer consulta, la vacuna es gratis!</p>
         <a href="../secciones/veterinaria.html"><img class="oferta" src="../img/vacunacion.webp" alt="#"></a>
-        <p> Promo pelu y veterinaria</p>
+        <p class="textooferta"> Descuento del 50% en la consulta veterinaria, si tu mascota es clienta de nuestra peluqueria! </p>
     </div>
 
 
