--- a/secciones/ofertas.html
+++ b/secciones/ofertas.html
@@ -68,18 +68,30 @@
 
 
     <div class="cajaoferta">
-        <a href="../secciones/productos.html"><img class="oferta" src="../img/alimento mascotas.jpg" alt="#"></a>
-        <p class="textooferta">No te pierdas nuestras promos </p>
-        <a href="../secciones/veterinaria.html"><img class="oferta" src="../img/peluqueria canina.jpg" alt="#"></a>
-        <p class="textooferta"> Tenemos descuentos  en la primer consulta, la vacuna es gratis!</p>
-        <a href="../secciones/veterinaria.html"><img class="oferta" src="../img/vacunacion.webp" alt="#"></a>
-        <p class="textooferta"> Descuento del 50% en la consulta veterinaria, si tu mascota es clienta de nuestra peluqueria! </p>
+        <div class="boxof">
+            <img class="oferta" src="../img/alimento mascotas.jpg" alt="#">
+            <p class="textooferta">Por atender a tu mascota en nuestra veterinaria obtenes un 20% en alimento</p>
+            <a href="../secciones/productos.html">Conocer más</a>
+        </div>
+        <div class="boxof">
+            <img class="oferta" src="../img/peluqueria canina.jpg" alt="#">
+            <p class="textooferta"> Tenemos descuentos en la primer consulta, la vacuna es gratis!</p>
+            <a href="../secciones/veterinaria.html">Conocer más</a>
+        </div>
+        <div class="boxof">
+            <img class="oferta" src="../img/vacunacion.webp" alt="#">
+            <p class="textooferta"> Descuento del 50% en la consulta veterinaria, si tu mascota es clienta de nuestra
+                peluquería! </p>
+            <a href="../secciones/veterinaria.html">Conocer más</a>
+        </div>
     </div>
 
 
-
-
     <footer>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d52564.45712152053!2d-58.51704463803551!3d-34.571817249595924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x95bcc9e10a670ebf%3A0x9096c3286273eb02!2sdolcetto%20pet%20shop!3m2!1d-34.6089166!2d-58.4817642!5e0!3m2!1ses!2sar!4v1654562214263!5m2!1ses!2sar"
+            width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>¡Seguinos en las Redes!</p>
         <div class="links">
             <a href="https://www.facebook.com/dolcettopet/"><i class="fab fa-facebook-f"></i></a>
