--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -66,16 +66,35 @@
         </div>
     </nav>
 
-
-    <div class="productos">
-        <div><img class="imgprod" src="../img/royal canin.png" alt="#"></div>
-        <div><img class="imgprod" src="../img/eukanuba.jpg" alt="#"></div>
-        <div><img class="imgprod" src="../img/excellent.jpg" alt="#"></div>
-        <div><img class="imgprod" src="../img/proplan.webp" alt="#"></div>
+    <div class="tituloproductos">
+        <h4>Alimento balanceado para mascotas</h4>
+        <div class="productos">
+            <img class="imgprod" src="../img/royal canin.png" alt="#">
+            <img class="imgprod" src="../img/eukanuba.jpg" alt="#">
+            <img class="imgprod" src="../img/excellent.jpg" alt="#">
+            <img class="imgprod" src="../img/proplan.png" alt="#">
+            <img class="imgprod" src="../img/catchow.png" alt="#">
+            <img class="imgprod" src="../img/dog chow.png" alt="#">
+        </div>
     </div>
 
+    <div class="tituloproductos">
+        <h4>Accesorios para mascotas</h4>
+        <div class="productos">
+            <img class="imgprod" src="../img/collares.jpg" alt="#">
+            <img class="imgprod" src="../img/camaperro.jpg" alt="#">
+            <img class="imgprod" src="../img/juguetes perro.jpg" alt="#">
+            <img class="imgprod" src="../img/juguetesgato.jpg" alt="#">
+            <img class="imgprod" src="../img/rascadores.jpg" alt="#">
+            <img class="imgprod" src="../img/ropamascota.jpg" alt="#">
+        </div>
+    </div>
 
     <footer>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d52564.45712152053!2d-58.51704463803551!3d-34.571817249595924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x95bcc9e10a670ebf%3A0x9096c3286273eb02!2sdolcetto%20pet%20shop!3m2!1d-34.6089166!2d-58.4817642!5e0!3m2!1ses!2sar!4v1654562214263!5m2!1ses!2sar"
+            width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>¡Seguinos en las Redes!</p>
         <div class="links">
             <a href="https://www.facebook.com/dolcettopet/"><i class="fab fa-facebook-f"></i></a>
