--- a/secciones/quienes-somos.html
+++ b/secciones/quienes-somos.html
@@ -67,7 +67,7 @@
     </nav>
 
     <div class="quienes">
-        <img src="../img/quienes somos.jpg" alt="#">
+        <img src="../img/staff.jpeg" alt="#">
         <p class="quienessomos">La Clínica Veterinaria DOLCETTO es una empresa dedicada al cuidado de las mascotas, que
             lleva en el mercado desde el año 2016, trabajando en pro del bienestar de cada mascota. Desde entonces, sus
             primordiales objetivos estuvieron encaminados a mejorar en todos sus servicios, y muchos de estos objetivos
