--- a/secciones/veterinaria.html
+++ b/secciones/veterinaria.html
@@ -64,21 +64,48 @@
         </div>
     </nav>
 
-    <div class="vete">
-        <div><img class="card2" src="../img/vacunas-para-perrosjpg.webp" alt="#">
-            <p class="textovete"> Calendario vacunacion cachorros</p>
-        </div>
-        <div><img class="card2" src="../img/consulta veterinaria.jpg" alt="#">
-            <p class="textovete"> Consulta veterinaria</p>
-        </div>
-        <div><img class="card2" src="../img/infomascota.jpg" alt="#">
-            <p class="textovete">informacion sobre mascotas</p>
-        </div>
 
+    <h4 class="titulovete">Nuestros servicios</h4>
+
+    <div class="cajaveterinaria">
+        <div class="boxvete">
+            <img class="servicios" src="../img/vacunas-para-perrosjpg.webp" alt="#">
+            <p class="textovete"> Calendario vacunación cachorros</p>
+            <a href="../secciones/contacto.html">Contactanos</a>
+        </div>
+        <div class="boxvete">
+            <img class="servicios" src="../img/calendario vacunas gato.jpg" alt="#">
+            <p class="textovete"> Calendario vacunación de gatos</p>
+            <a href="../secciones/contacto.html">Contactanos</a>
+        </div>
+        <div class="boxvete">
+            <img class="servicios" src="../img/consulta veterinaria.jpg" alt="#">
+            <p class="textovete"> Consulta veterinaria</p>
+            <a href="../secciones/contacto.html">Contactanos</a>
+        </div>
+        <div class="boxvete">
+            <img class="servicios" src="../img/infomascota.jpg" alt="#">
+            <p class="textovete"> información sobre mascotas</p>
+            <a href="../secciones/contacto.html">Contactanos</a>
+        </div>
+        <div class="boxvete">
+            <img class="servicios" src="../img/Especialidades veterinarias.webp" alt="#">
+            <p class="textovete"> Nuestras especialidades</p>
+            <a href="../secciones/contacto.html">Contactanos</a>
+        </div>
+        <div class="boxvete">
+            <img class="servicios" src="../img/peluqueria canina2.jpg" alt="#">
+            <p class="textovete"> Peluquería canina</p>
+            <a href="../secciones/contacto.html">Contactanos</a>
+        </div>
     </div>
 
 
     <footer>
+        <iframe
+        src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d52564.45712152053!2d-58.51704463803551!3d-34.571817249595924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x95bcc9e10a670ebf%3A0x9096c3286273eb02!2sdolcetto%20pet%20shop!3m2!1d-34.6089166!2d-58.4817642!5e0!3m2!1ses!2sar!4v1654562214263!5m2!1ses!2sar"
+        width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>¡Seguinos en las Redes!</p>
         <div class="links">
             <a href="https://www.facebook.com/dolcettopet/"><i class="fab fa-facebook-f"></i></a>
