--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dolcetto Petshop</title>
     <meta name="description" content="Este un sitio web sobre un petshop-veterinaria y sus distintos servicios">
     <meta name="keywords"
         content="Veterinaria, petshop, gatos, perros, villa del parque, alimento balanceado,mascotas ">
     <meta name="author" content="Barbara Mari">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Palette+Mosaic&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,6 +24,7 @@
         rel="stylesheet">
     <link rel="shortcut icon" href="./img/favicon/huella.png">
     <link rel="stylesheet" href="./css/style.css">
+    <title>Dolcetto Petshop</title>
 </head>
 
 
@@ -66,17 +64,41 @@
             </div>
         </div>
     </nav>
-    <div >
-        <div>
-            <a href="./secciones/productos.html"><img class="ofertas"src="./img/1.webp" alt="#"></a>
-        </div>
-        <div>
-            <a href="./secciones/productos.html"><img class="ofertas"src="./img/2.webp" alt="#"></a>
-        </div>
-    </div> -->
 
+    <div class="slide">
+        <a href="./secciones/productos.html"><img src="./img/1.webp" alt="#"></a>
+        <a href="./secciones/productos.html"><img src="./img/2.webp" alt="#"></a>
+    </div>
+
+    <div class="containerinicio">
+        <div class="cardinicio">
+            <img src="./img/staff.jpeg">
+            <h4>Quienes Somos</h4>
+            <p>La Clínica Veterinaria DOLCETTO es una empresa dedicada al cuidado de las mascotas, que lleva en el
+                mercado desde el año 2016, trabajando en pro del bienestar de cada mascota. </p>
+            <a href="./secciones/quienes-somos.html">Leer más</a>
+        </div>
+        <div class="cardinicio">
+            <img src="./img/veterinaria gato.jpg">
+            <h4>Nuestra veterinaria</h4>
+            <p>En nuestra clinica contamos con un equipo de trabajo especializado en brindar completa atención a los
+                pequeños animales. Ofrecemos diferentes servicios de vacunación, análisis, entre otros.</p>
+            <a href="./secciones/veterinaria.html">Leer más</a>
+        </div>
+        <div class="cardinicio">
+            <img src="./img/staff.jpeg">
+            <h4>Tu mascota</h4>
+            <p>Disponemos de modernas y completas instalaciones, en las que ofrecemos una amplia variedad de alimento y
+                accesorios para darle lo mejor a nuestras mascotas también poseemos envío gratis</p>
+            <a href="./secciones/productos.html">Leer más</a>
+        </div>
+    </div>
 
     <footer>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d52564.45712152053!2d-58.51704463803551!3d-34.571817249595924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x95bcc9e10a670ebf%3A0x9096c3286273eb02!2sdolcetto%20pet%20shop!3m2!1d-34.6089166!2d-58.4817642!5e0!3m2!1ses!2sar!4v1654562214263!5m2!1ses!2sar"
+            width="800" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>¡Seguinos en las Redes!</p>
         <div class="links">
             <a href="https://www.facebook.com/dolcettopet/"><i class="fab fa-facebook-f"></i></a>
